# SemesterProjekt3

./: CMakeLists.txt  README.md  Socket.cpp  Socket.h  calibrate.cpp  calibrate.h  cam.cpp  cam.h  kastebane.cpp  kastebane.h  locate.cpp  locate.h  main.cpp
